--- a/styles.css
+++ b/styles.css
@@ -145,3 +145,37 @@ footer a:visited {
 footer a:hover {
     text-decoration: underline;
 }
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+blockquote {
+ background: rgb(241, 241, 241); 
+ border-left: 10px solid rgba(176, 124, 48, 0.5);
+quotes: "\201C""\201D""\201C""\2019";
+ border-radius: 20%;
+	margin: 1%;
+	float: left;
+	padding: 2%;
+}
+blockquote p:first-of-type:before {
+content: open-quote;
+font-size: 4em; 
+line-height: 0.1em;
+margin: 0.2em 0.2em 0.25em;
+vertical-align: -0.4em;
+float: left;
+rgba(176,124,48,0.50);
+
+}
